tests/syntax_error/missing_second_equal_sign.jou
def foo() -> void:
    x = 1
    # TODO: improve the error message?
    if x = 1:  # Error: expected ':' followed by a new line with more indentation, got '='
        return
